--- a/index.html
+++ b/index.html
@@ -737,7 +737,7 @@ Reaching home you &lt;div class=&quot;space-around&quot;&gt;&lt;&lt;button [[unl
 &lt;&lt;set $PDF_ending to false&gt;&gt;\
 &lt;&lt;set $WARC_ending to false&gt;&gt;\
 &lt;&lt;set $Clippy_ending to false&gt;&gt;\
-&lt;&lt;set $Bird_ending to false&gt;&gt;\</tw-passagedata><tw-passagedata pid="21" name="Cheetah" tags="Quiz-answer" position="1650,2700" size="100,100">&quot;Fast and athletic, just like me!&quot; &lt;b&gt;FLASTA&lt;/b&gt; is very happy with your answer. 
+&lt;&lt;set $Bird_ending to false&gt;&gt;\</tw-passagedata><tw-passagedata pid="21" name="Cheetah" tags="Quiz-answer" position="1650,2700" size="100,100">&quot;Fast and athletic, just like me!&quot; &lt;b&gt;FASTA&lt;/b&gt; is very happy with your answer. 
 
 &lt;div class=&quot;space-around&quot;&gt;&lt;&lt;button [[Continue|Question 5]] &gt;&gt;&lt;&lt;set $pointsFASTA to $pointsFASTA += 1&gt;&gt;&lt;&lt;/button&gt;&gt;&lt;/div&gt;</tw-passagedata><tw-passagedata pid="22" name="Communication and organisation" tags="Quiz-answer" position="2575,2425" size="100,100">&lt;b&gt;CSV&lt;/b&gt; straightens up, clears their voice before responding: &quot;Clear communication is essential! Just as I keep data organized, a successful relationship relies on understanding each other&#39;s needs and maintaining clarity in discussions.&quot;
  
