--- a/index.html
+++ b/index.html
@@ -482,27 +482,27 @@ This game was lovingly created by:
 &lt;/div&gt;
 &lt;div class=&quot;creditsbox&quot;&gt;\
 	&lt;img src=&quot;https://raw.githubusercontent.com/Francesca4242/File_Format_Fling/refs/heads/main/assets/Creators/plotcreator.png&quot; alt=&quot;Francesca&quot; class=&quot;creditspic&quot;&gt;\
-	&lt;center&gt;&lt;b&gt;Francesca&lt;/b&gt;&lt;br&gt;&lt;i&gt;Plot Designer&lt;/i&gt;&lt;/center&gt;\
+	&lt;center&gt;&lt;b&gt;Francesca&lt;/b&gt;&lt;br&gt;&lt;i&gt;Plot Designer&lt;br&gt;Pixel Art Artist&lt;/i&gt;&lt;/center&gt;\
 &lt;/div&gt;\
 &lt;div class=&quot;creditsbox&quot;&gt;\
 	&lt;img src=&quot;https://raw.githubusercontent.com/Francesca4242/File_Format_Fling/refs/heads/main/assets/Creators/csssculptor.png&quot; alt=&quot;Anton&quot; class=&quot;creditspic&quot;&gt;\
-	&lt;center&gt;&lt;b&gt;Anton&lt;/b&gt;&lt;br&gt;&lt;i&gt;CSS Sculptor&lt;/i&gt;&lt;/center&gt;\
+	&lt;center&gt;&lt;b&gt;Anton&lt;/b&gt;&lt;br&gt;&lt;i&gt;CSS Sculptor&lt;br&gt;Pixel Art Artist&lt;/i&gt;&lt;/center&gt;\
 &lt;/div&gt;\
 &lt;div class=&quot;creditsbox&quot;&gt;\
 	&lt;img src=&quot;https://raw.githubusercontent.com/Francesca4242/File_Format_Fling/refs/heads/main/assets/Creators/quizmaster.png&quot; alt=&quot;Elaine&quot; class=&quot;creditspic&quot;&gt;\
-	&lt;center&gt;&lt;b&gt;Elaine&lt;/b&gt;&lt;br&gt;&lt;i&gt;Quiz Master&lt;/i&gt;&lt;/center&gt;\
+	&lt;center&gt;&lt;b&gt;Elaine&lt;/b&gt;&lt;br&gt;&lt;i&gt;Quiz Master&lt;br&gt;Pixel Art Artist&lt;/i&gt;&lt;/center&gt;\
 &lt;/div&gt;\
 &lt;div class=&quot;creditsbox&quot;&gt;\
 	&lt;img src=&quot;https://raw.githubusercontent.com/Francesca4242/File_Format_Fling/refs/heads/main/assets/Creators/formatstylist.png&quot; alt=&quot;Sharon&quot; class=&quot;creditspic&quot;&gt;\
-&lt;center&gt;&lt;b&gt;Sharon&lt;/b&gt;&lt;br&gt;&lt;i&gt;File Format Stylist&lt;/i&gt;&lt;/center&gt;\
+&lt;center&gt;&lt;b&gt;Sharon&lt;/b&gt;&lt;br&gt;&lt;i&gt;File Format Stylist&lt;br&gt;Pixel Art Artist&lt;/i&gt;&lt;/center&gt;\
 &lt;/div&gt;\
 &lt;div class=&quot;creditsbox&quot;&gt;\
 	&lt;img src=&quot;https://raw.githubusercontent.com/Francesca4242/File_Format_Fling/refs/heads/main/assets/Creators/codebreaker.png&quot; alt=&quot;Ellie&quot; class=&quot;creditspic&quot;&gt;\
-	&lt;center&gt;&lt;b&gt;Ellie&lt;/b&gt;&lt;br&gt;&lt;i&gt;Code Cracker&lt;/i&gt;&lt;/center&gt;\
+	&lt;center&gt;&lt;b&gt;Ellie&lt;/b&gt;&lt;br&gt;&lt;i&gt;Code Cracker&lt;br&gt;Pixel Art Artist&lt;/i&gt;&lt;/center&gt;\
 &lt;/div&gt;\
 &lt;div class=&quot;creditsbox&quot;&gt;\
 	&lt;img src=&quot;https://raw.githubusercontent.com/Francesca4242/File_Format_Fling/refs/heads/main/assets/Creators/chatgpt.png&quot; alt=&quot;ChatGPT&quot; class=&quot;creditspic&quot;&gt;\
-	&lt;center&gt;&lt;b&gt;ChatGPT&lt;/b&gt;&lt;br&gt;&lt;i&gt;Ghost Writer&lt;/i&gt;&lt;/center&gt;\
+	&lt;center&gt;&lt;b&gt;ChatGPT&lt;/b&gt;&lt;br&gt;&lt;i&gt;Ghost Writer&lt;br&gt;Pixel Art Artist&lt;/i&gt;&lt;/center&gt;\
 &lt;/div&gt;\
 
 &lt;center&gt;&lt;div class=&quot;space-around&quot;&gt;\
