--- a/index.html
+++ b/index.html
@@ -1315,27 +1315,27 @@ This game was lovingly created by:
 &lt;/div&gt;
 &lt;div class=&quot;creditsbox&quot;&gt;\
 	&lt;img src=&quot;https://raw.githubusercontent.com/Francesca4242/File_Format_Fling/refs/heads/main/assets/Creators/plotcreator.png&quot; alt=&quot;Francesca&quot; class=&quot;creditspic&quot;&gt;\
-	&lt;center&gt;&lt;b&gt;Francesca&lt;/b&gt;&lt;br&gt;&lt;i&gt;Plot Designer&lt;/i&gt;&lt;/center&gt;\
+	&lt;center&gt;&lt;b&gt;Francesca&lt;/b&gt;&lt;br&gt;&lt;i&gt;Plot Designer&lt;br&gt;Likes Clowns&lt;/i&gt;&lt;/center&gt;\
 &lt;/div&gt;\
 &lt;div class=&quot;creditsbox&quot;&gt;\
 	&lt;img src=&quot;https://raw.githubusercontent.com/Francesca4242/File_Format_Fling/refs/heads/main/assets/Creators/csssculptor.png&quot; alt=&quot;Anton&quot; class=&quot;creditspic&quot;&gt;\
-	&lt;center&gt;&lt;b&gt;Anton&lt;/b&gt;&lt;br&gt;&lt;i&gt;CSS Sculptor&lt;/i&gt;&lt;/center&gt;\
+	&lt;center&gt;&lt;b&gt;Anton&lt;/b&gt;&lt;br&gt;&lt;i&gt;CSS Sculptor&lt;br&gt;Coder Magnifique&lt;/i&gt;&lt;/center&gt;\
 &lt;/div&gt;\
 &lt;div class=&quot;creditsbox&quot;&gt;\
 	&lt;img src=&quot;https://raw.githubusercontent.com/Francesca4242/File_Format_Fling/refs/heads/main/assets/Creators/quizmaster.png&quot; alt=&quot;Elaine&quot; class=&quot;creditspic&quot;&gt;\
-	&lt;center&gt;&lt;b&gt;Elaine&lt;/b&gt;&lt;br&gt;&lt;i&gt;Quiz Master&lt;/i&gt;&lt;/center&gt;\
+	&lt;center&gt;&lt;b&gt;Elaine&lt;/b&gt;&lt;br&gt;&lt;i&gt;Quiz Master&lt;br&gt;Editor Extraordinaire&lt;/i&gt;&lt;/center&gt;\
 &lt;/div&gt;\
 &lt;div class=&quot;creditsbox&quot;&gt;\
 	&lt;img src=&quot;https://raw.githubusercontent.com/Francesca4242/File_Format_Fling/refs/heads/main/assets/Creators/formatstylist.png&quot; alt=&quot;Sharon&quot; class=&quot;creditspic&quot;&gt;\
-&lt;center&gt;&lt;b&gt;Sharon&lt;/b&gt;&lt;br&gt;&lt;i&gt;File Format Stylist&lt;/i&gt;&lt;/center&gt;\
+&lt;center&gt;&lt;b&gt;Sharon&lt;/b&gt;&lt;br&gt;&lt;i&gt;File Format Stylist&lt;br&gt;Team Wrangler&lt;/i&gt;&lt;/center&gt;\
 &lt;/div&gt;\
 &lt;div class=&quot;creditsbox&quot;&gt;\
 	&lt;img src=&quot;https://raw.githubusercontent.com/Francesca4242/File_Format_Fling/refs/heads/main/assets/Creators/codebreaker.png&quot; alt=&quot;Ellie&quot; class=&quot;creditspic&quot;&gt;\
-	&lt;center&gt;&lt;b&gt;Ellie&lt;/b&gt;&lt;br&gt;&lt;i&gt;Code Cracker&lt;/i&gt;&lt;/center&gt;\
+	&lt;center&gt;&lt;b&gt;Ellie&lt;/b&gt;&lt;br&gt;&lt;i&gt;Code Cracker&lt;br&gt;Resident Sword Expert&lt;/i&gt;&lt;/center&gt;\
 &lt;/div&gt;\
 &lt;div class=&quot;creditsbox&quot;&gt;\
 	&lt;img src=&quot;https://raw.githubusercontent.com/Francesca4242/File_Format_Fling/refs/heads/main/assets/Creators/chatgpt.png&quot; alt=&quot;ChatGPT&quot; class=&quot;creditspic&quot;&gt;\
-	&lt;center&gt;&lt;b&gt;ChatGPT&lt;/b&gt;&lt;br&gt;&lt;i&gt;Ghost Writer&lt;/i&gt;&lt;/center&gt;\
+	&lt;center&gt;&lt;b&gt;ChatGPT&lt;/b&gt;&lt;br&gt;&lt;i&gt;Ghost Writer&lt;br&gt;Robotic Powerhouse&lt;/i&gt;&lt;/center&gt;\
 &lt;/div&gt;\</tw-passagedata><tw-passagedata pid="113" name="The web" tags="Quiz-answer" position="1900,2150" size="100,100">&lt;b&gt;WARC&lt;/b&gt; nods approvingly, a gentle twinkle in their eyes: &quot;I thrive in the digital world, where I can capture and preserve a wide range of web content. My purpose is to archive information, ensuring that nothing important is lost to time.&quot;
 
 &lt;div class=&quot;space-around&quot;&gt;&lt;&lt;button [[Continue|Question 4]] &gt;&gt;&lt;&lt;set $pointsWARC to $pointsWARC += 1&gt;&gt;&lt;&lt;/button&gt;&gt;&lt;/div&gt;</tw-passagedata><tw-passagedata pid="114" name="This is too smushy for me, I want out" tags="Story" position="2575,725" size="100,100">Another deadline. Another project. Another file to preserve.
